--- a/springboot_example/pom.xml
+++ b/springboot_example/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!--MQ支持-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
         <!--druid数据库连接池-->
         <dependency>
