--- a/dubbo_example/pom.xml
+++ b/dubbo_example/pom.xml
@@ -201,12 +201,13 @@
             <version>1.2.62</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.alibaba/dubbo -->
+        <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo -->
         <dependency>
-            <groupId>com.alibaba</groupId>
+            <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.7.5</version>
+            <version>2.7.3</version>
         </dependency>
+
 
         <dependency>
             <groupId>io.netty</groupId>
