--- a/dubbo_example/pom.xml
+++ b/dubbo_example/pom.xml
@@ -12,6 +12,7 @@
         <module>dubbo_api</module>
         <module>dubbo_provider</module>
         <module>dubbo_consumer</module>
+        <module>dubbo_springboot_commons</module>
     </modules>
 
 
