--- a/springboot_example/pom.xml
+++ b/springboot_example/pom.xml
@@ -70,6 +70,14 @@
             <version>1.2.62</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.meituan.octo</groupId>
+            <artifactId>dorado</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
